feat(SectionManager): 구간등록 기능 추가